--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "Muhammad-RK-Isa",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "firebase": "^9.22.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
     "nodemon": "^2.0.22"
   }
