--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-slow-down": "^1.6.0",
     "firebase": "^9.22.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
